--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -63,7 +63,7 @@
             </div>
         </div>
     </section>
-    <section class="work-section" id="work">
+    <section class="work-section" id="portfolio">
         <h2 class="section-title">Our Work</h2>
         <p class="section-subtitle">Explore our latest projects and see how we've helped businesses grow.</p>
         <div class="work-gallery">
@@ -89,7 +89,7 @@
 
         </div>
     </section>
-    <section class="contact-header-section">
+    <section class="contact-header-section" id="contact">
         <h2 class="section-title">Let's Work Together</h2>
         <p class="section-subtitle">Ready to start your next project? Get in touch with us and let's create something amazing.</p>
     </section>
